# agenceEditorial

AgentEditorial/: .gitignore  AMELIORATIONS_TREND_PIPELINE.md  ANALYSE_DATABASE_USAGE.md  ANALYSE_ECHECS_SCRAPING.md  ANALYSE_TABLES_NON_UTILISEES.md  ANALYSE_TABLES_VIDES.md  ANALYSIS_LOGS_DOMAIN_MISMATCH.md  ANALYSIS_LOGS_FINAL.md  ANALYSIS_LOGS_QIMINFO.md  ANALYSIS_LOGS_QIMINFO_FIX.md  ANALYSIS_LOGS_UBG_INTERACTIVE.md  ANALYSIS_SCRAPING_ISSUES.md  COMMANDS.md  Makefile  PLAN_AMELIORATION_SCRAPING.md  README.md  diagnostic_topics_route.json  env.template  innosys_topics_by_domain.json  pyproject.toml
AgentEditorial/.specify/memory/: constitution.md
AgentEditorial/docker/: docker-compose.yml
AgentEditorial/docs/: ANALYSE_COLLECTIONS_QDRANT.md  DIAGRAMMES_FLUX_APPLICATION_BDD.md  GRILLE_CLASSIFICATION_TOPICS.md  PROGRESS_LOGGER.md  TOON_IMPLEMENTATION.md  architecture_route_sites_analyze.md  gpu-setup.md  ideogram_migration.md  pgadmin-setup.md  rapport_analyse_image.md  schema_route_competitors_search.md  schema_route_discovery_scrape.md  schema_route_sites_analyze.md  schema_route_trend_pipeline_analyze.md  usecase_route_sites_analyze.md
AgentEditorial/docs/issues/: 001-integration-toon.md  002-personnalisation-summaries-domaines.md  003-assignation-topic-id-articles.md  004-amélioration-gestion-workflow-execution-audit.md  005-amélioration-robustesse-route-audit.md  ANALYSE-PROBLEMES-REPONSE-AUDIT.md
AgentEditorial/docs/plans/: plan_route_draft.md
AgentEditorial/python_scripts/agents/: agent_analysis.py  agent_competitor.py  agent_content_creator.py  agent_image_generation.py  agent_orchestrator.py  agent_scraping.py  agent_topic_modeling.py  agent_trend_pipeline.py  base_agent.py  prompts.py
AgentEditorial/python_scripts/api/: dependencies.py  main.py
AgentEditorial/python_scripts/config/: image_config.py  settings.py
AgentEditorial/python_scripts/database/: crud_article_learning.py  crud_articles.py  crud_client_articles.py  crud_clusters.py  crud_coverage.py  crud_crawl_cache.py  crud_error_logs.py  crud_executions.py  crud_gaps.py  crud_generated_articles.py  crud_images.py  crud_llm_results.py  crud_permissions.py  crud_profiles.py  crud_temporal_metrics.py  crud_topics.py  crud_weak_signals.py  db_session.py  models.py
AgentEditorial/python_scripts/image_generation/: __init__.py  exceptions.py  ideogram_client.py  image_cache.py  image_critic.py  image_generator.py  prompt_builder.py  prompt_builder_v3.py  vram_manager.py  vram_resource_manager.py  z_image_generator.py
AgentEditorial/python_scripts/ingestion/: article_detector.py  crawl_pages.py  detect_sitemaps.py  robots_txt.py  text_cleaner.py
AgentEditorial/python_scripts/tests/: test_image_critic.py  test_image_generation_flow.py
AgentEditorial/python_scripts/utils/: exceptions.py  json_utils.py  logging.py  progress_logger.py  retry.py  toon_utils.py
AgentEditorial/scripts/: analyze_api_logs.py  analyze_audit_output_detailed.py  analyze_audit_response.py  analyze_audit_route_detailed.py  analyze_competitor_exclusions.py  analyze_competitors_scraping.py  analyze_database_usage.py  analyze_execution.py  analyze_execution_detailed.py  analyze_image_generation.py  analyze_latest_35.py  analyze_prompt_manual.py  analyze_trend_pipeline_results.py  analyze_unused_tables.py  analyze_unused_tables_complete.py  check_all_executions.py  check_and_relaunch.py  check_audit_data.py  check_execution_output.py  check_qdrant_indexing.py  check_recent_executions.py  check_running_execution.py  check_scraping_logs.py  clean_database.py  clear_database.py  count_topics_by_domain.py  debug_execution_115.py  demo_image_generation.py  demo_z_image.py  diagnose_topics_route.py  fix_sequences.py  free_vram.py  generate_audit_analysis_json.py  index_existing_articles.py  init_qdrant.py  init_qdrant_client.py  migrate_qdrant_to_1024.py  prepare_article_generation_test.py  reclassify_topic_clusters_scope.py  relaunch_analysis_direct.py  (+21 more)
(+158 files in other folders)
